<resources>
    <string name="app_name">狱务通</string>
    <string name="drawer_open">打开抽屉</string>
    <string name="drawer_close">关闭抽屉</string>
    <string name="alarm_reminder_msg">闹钟提醒已开启，如您有即将会见的档期，系统将会在会见开始前半小时以闹钟形式提醒您，请注意手机状态。</string>
    <string name="agreement">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;国科狱务公开APP是由国科政信科技（北京）股份有限公司开发的一款监狱类软件，用于服刑人员家属、社会各界人士知悉服刑情况和监狱狱务情况。请您在使用本软件前仔细阅读如下条款。您的安装使用行为将视为对本《协议》的接受，并同意接受本《协议》各项条款的约束。\n
一、	许可证的授予。本《协议》授予您下列权利：\n
&#160;&#160;&#160;&#160;&#160;&#160;&#160;您可安装、复制、分发和传播本产品来使用，但您必须保证每一份复制、分发和传播都必须是完整和真实的。\n
二、其它权利和限制说明。\n
&#160;&#160;&#160;&#160;&#160;&#160;&#160;本软件针对家属和社会人员有不同的设置，家属可以获得服刑人员相关服刑信息，社会人事只能获得监狱允许范围内的相关信息。
本软件需付费使用，个人使用授权版本只能由单个用户在一台或多台手机上亲自使用；
您不得对本软件产品进行反向工程、反向编译和反向汇编，不得删除本软件及其他副本上一切关于版权的信息，不得制作和提供该软件的注册机及破解程序。除非适用法律明文允许上述活动，否则您必须遵守此协议限制。
最终解释权归国科政信科技（北京）股份有限公司所有。
</string>
    <string name="tanjian_notice">探监须知：\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;狱务通为您提供方便快捷的探监申请服务，申请通过后，您即可在约定的时间内前往监狱探监。\n1、根据规定，服刑人员每月只能接受两次及以内的探视服务。\n2、部分服刑人员不提供探视服务。\n3、狱务通探监服务暂时只对直系近亲属开放，请谅解。\n4、本服务端每月只能提交3次探监申请，请勿无故提交，以免浪费机会。</string>
    <string name="sunday">日</string>
    <string name="monday">一</string>
    <string name="thesday">二</string>
    <string name="wednesday">三</string>
    <string name="thursday">四</string>
    <string name="friday">五</string>
    <string name="saturday">六</string>
    <string name="meeting_notice"><![CDATA[注意：\n        请确保视频内都是您的亲人，不是请及时告知狱警。\n        请注意通话不涉及犯罪、国家机密等内容，否则您将失去并可能永久失去远程会见机会。\n        请注意时间长短，不要影响后面的狱友使用。\n        若您在通话过程中有任何问题，请及时联系狱警沟通解决。]]></string>
    <string name="avchat_hangup">结束通话</string>
    <string name="avchat_switch_to_video">切换视频</string>
    <string name="avchat_video_call_request">请求视频聊天…</string>
    <string name="avchat_audio_call_wifi_unavailable_tip">当前非WiFi环境，每分钟将产生约0.5M的流量</string>
    <string name="avchat_network_grade_0">网络通畅：</string>
    <string name="avchat_network_grade_1">网络正常：</string>
    <string name="avchat_network_grade_2">网络一般：</string>
    <string name="avchat_network_grade_3">网络较差：</string>
    <string name="avchat_receive">开启</string>
    <string name="avchat_pickup">接听</string>
    <string name="avchat_net_error_then_quit">网络异常，通话结束</string>
    <string name="avchat_call_finish">通话结束</string>
    <string name="avchat_peer_reject">对方拒绝了本次通话</string>
    <string name="avchat_peer_protocol_low_version">对方版本过低，请提示对方升级</string>
    <string name="avchat_local_protocol_low_version">版本过低，请升级后使用</string>
    <string name="avchat_invalid_channel_id">对方已挂断</string>
    <string name="avchat_local_call_busy">本地通话中，无法使用易信进行通话。</string>
    <string name="avchat_peer_busy">对方正在通话中，请稍后再拨。</string>
    <string name="avchat_wait_recieve">等待对方接听…</string>
    <string name="avchat_audio_call_request">请求通话</string>
    <string name="avchat_connecting">连接中…</string>
    <string name="avchat_audio_to_video_invitation">对方邀请你开启视频聊天…</string>
    <string name="avchat_peer_close_camera">对方关闭了摄像头</string>
    <string name="avchat_local_close_camera">你关闭了摄像头</string>
    <string name="avchat_audio_to_video_wait">正在等待对方开启摄像头…</string>
    <string name="avchat_no_response">无人接听</string>
    <string name="avchat_switch_video_reject">对方不同意音频切换为视频！</string>
    <string name="avchat_notification">正在与%1$s通话中，点击继续</string>
    <string name="avchat_call">网络通话</string>
    <string name="avchat_no_pickup_call">未接听</string>
    <string name="avchat_in_switch">请耐心等待！</string>
    <string name="avchat_device_no_ready">音视频设备未准备好</string>
    <string name="meeting_note">会见须知： \n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;狱务通为您提供远程探监服务，您可以通过狱务通申请探监，并通过手机视频和服刑人员进行远程探视。 在申请远程探监前，请您详细阅读以下注意事项：\n1、服刑人员每月可远程探监次数不限。 \n2、部分服刑人员不提供探视服务。 \n3、狱务通软件暂时只提供直系亲属远程探视，请谅解。 \n4、根据安全要求，您的会见信息可能会被记录。 \n5、每次会见需缴纳一定费用，请勿无故提交远程探监申请。</string>
    <string name="alarm_remind"><![CDATA[        温馨提示：您与德山监狱的远程视频会见即将开始，请连接好网络做好准备。]]></string>
    <string name="pull_to_refresh_pull_label">下拉可以刷新</string>
    <string name="pull_to_refresh_release_label">释放立即刷新</string>
    <string name="pull_to_refresh_refreshing_label">正在刷新…</string>
    <string name="pull_to_refresh_tap_label">一大波商品正在准备中.......</string>
    <string name="enable_logined">登录后可用</string>
    <string name="dialog_default_title">Here\'s a message!</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="network_2g">目前网络处于2G状态，请尽快切换到wifi，否则可能会影响通话质量！</string>
    <string name="network_3g">目前网络处于3G状态，请尽快切换到wifi，否则可能会影响通话质量！</string>
    <string name="network_4g">目前网络处于4G状态，请尽快切换到wifi，否则可能会影响通话质量！</string>
    <string name="network_wifi">目前网络处于wifi状态，请尽快切换到wifi，否则可能会影响通话质量！</string>
    <string name="network_default">目前网络处于默认状态，请尽快切换到wifi，否则可能会影响通话质量！</string>
    <string name="net_broken">网络连接已断开，请检查网络</string>
    <string name="status_online">在线</string>
    <string name="status_offline">离线</string>
    <string name="status_leave">离开</string>
    <string name="status_do_not_disturb">免打扰</string>
    <string name="main_get_contact">联系人</string>
    <string name="main_get_vconf_contact">搜索联系人</string>
    <string name="main_get_vconf_list">获取会议列表</string>
    <string name="make_call">呼叫点对点会议</string>
    <string name="muti_call">呼叫多点会议</string>
    <string name="main_create_vconf">创建视频会议</string>
    <string name="main_setting">设置</string>
    <string name="main_logout">注销</string>
    <string name="server_adds">服务器地址</string>
    <string name="account">帐号</string>
    <string name="password">密码</string>
    <string name="login_text">登录</string>
    <string name="login_off">退出</string>
    <string name="vconf_name">会议名称</string>
    <string name="vconf_num">会议号码</string>
    <string name="vconf_shortNum">会议号码</string>
    <string name="vconf_time">会议时间</string>
    <string name="vconf_endtime">结束时间</string>
    <string name="vconf_timeLen">会议时长</string>
    <string name="vconf_organizor">发起人</string>
    <string name="vconf_info_title">会议信息</string>
    <string name="vconf_join_members">与会人员(%1$s)</string>
    <string name="vconf_join_members_title">与会人员</string>
    <string name="vconf_add_members">添加人员</string>
    <string name="vconf_empty">暂时没有会议室,请下拉刷新获取数据</string>
    <string name="vconf_is_not_use">网络会议暂时不可用,请下拉刷新</string>
    <string name="vconf_inavilable">网络会议暂时不可用</string>
    <string name="vconf_empty_str">正确的决策来自会议\n赶紧召集一个会议吧</string>
    <string name="vconf_chooseJoinWay">请选择入会方式</string>
    <string name="vconf_choose_callupWay">请选择呼叫方式</string>
    <string name="vconf_convene_now">立刻召开</string>
    <string name="vconf_convene_edit">编辑</string>
    <string name="vconf_convene_title">召集会议</string>
    <string name="vconf_create_title">创建会议</string>
    <string name="vconf_convene">正在召集</string>
    <string name="vconf_call">正在呼叫</string>
    <string name="vconf_join">正在加入</string>
    <string name="vconf_join_waitingTxt">正在连接,请稍候&#8230;</string>
    <string name="vconf_join_waitingTxt_p2p">请求与您通话</string>
    <string name="vconf_join_waitingTxt_mul">邀请您进入会议</string>
    <string name="vconf_waiting">请稍候&#8230;</string>
    <string name="vconf_audio_waiting">音频呼叫中</string>
    <string name="vconf_QualityMeetings">视频质量会议</string>
    <string name="vconf_joinConfAudio_failed">音频入会失败</string>
    <string name="vconf_joinConfVideo_failed">视频入会失败</string>
    <string name="vconf_Apply4AdministrativePrivileges">申请管理权限</string>
    <string name="vconf_releaseAdministrativePrivileges">释放管理权限</string>
    <string name="vconf_Apply4Speaker">申请发言</string>
    <string name="vconf_EnableConversationMode">启用对话模式</string>
    <string name="vconf_StatisticalInformation">统计信息</string>
    <string name="vconf_Touch2Video">轻触此处返回视频</string>
    <string name="vconf_Touch2Audio">轻触此处返回音频</string>
    <string name="vconf_ExitConf">退出会议</string>
    <string name="vconf_EndConf">结束会议</string>
    <string name="vconf_newworkStatistics">网络</string>
    <string name="vconf_sendStatistics">发送</string>
    <string name="vconf_receiveStatistics">接收</string>
    <string name="vconf_systemPerformance">性能</string>
    <string name="vconf_PrimoStatistics">第一路</string>
    <string name="vconf_SecondStatistics">第二路</string>
    <string name="vconf_networkStatistics_pic1">图像1</string>
    <string name="vconf_networkStatistics_pic2">图像2</string>
    <string name="vconf_decodingRate">解码率(Kbps)</string>
    <string name="vconf_receiveFrames">接收帧数(个)</string>
    <string name="vconf_lossPacketRate">丢包率(%)</string>
    <string name="vconf_lossPacketNum">丢包总数(个)</string>
    <string name="vconf_videoProtocol">视频协议</string>
    <string name="vconf_audioProtocol">音频协议</string>
    <string name="vconf_resolution">分辨率</string>
    <string name="vconf_videoSpeed">视频速率</string>
    <string name="vconf_videoFrameRate">视频帧率</string>
    <string name="vconf_encryption">加密</string>
    <string name="vconf_usedMemory">已用内存</string>
    <string name="vconf_availableMemory">可用内存</string>
    <string name="vconf_cpuUtilization">cpu使用率</string>
    <string name="vconf_close_info">关闭</string>
    <string name="vconf_refuse_all">拒绝所有</string>
    <string name="vconf_refuse">拒绝</string>
    <string name="vconf_flow_remind">电话应答将为您节省流量</string>
    <string name="vconf_chooseJoinWay_3GInfo_mobile">在移动数据网络环境下会影响视音频质量，\n并产生手机流量，可选择电话方式入会</string>
    <string name="vconf_chooseJoinWay_3GInfo_normal">在移动数据网络环境下会影响视音频质量，\n并产生手机流量</string>
    <string name="vconf_tel_response">电话</string>
    <string name="vconf_video_response">视频接听</string>
    <string name="vconf_audio_response">音频接听</string>
    <string name="vconf_join_havaBeenTheMeeting">您已在此会中</string>
    <string name="vconf_inavilable_iscalling">正在发起呼叫</string>
    <string name="vconf_inavilable_isconveneing">正在召集会议</string>
    <string name="vconf_inavilable_iscallIncoming">正处于被呼叫中</string>
    <string name="vconf_havaBeenTheMeeting_CannotCall">正在会议中，不能呼叫</string>
    <string name="vconf_havaBeenTheVConf_other">对端正在会议中，请稍候再试</string>
    <string name="vconf_havaBeenTheVConf">当前正在会议中，请您退出会议后再试</string>
    <string name="vconf_endingConf2Join">正在会议中，是否退出当前会议并进入新的会议</string>
    <string name="vconf_disabled_default">当前不能进行会议操作，请稍候再试</string>
    <string name="vconf_disabled_no_disturb">对方正忙，请稍后再试</string>
    <string name="vconf_disabled_offline">对方不在线，请稍候再试</string>
    <string name="vconf_disabled_offline_makecall">对方不在线，请稍候再试</string>
    <string name="vconf_disabled_conference">对方正在会议中，暂时无法应答</string>
    <string name="vconf_answer">接听</string>
    <string name="vconf_answer_tel">电话%1$s将被呼叫</string>
    <string name="vconf_answer_tel2">如未收到电话,请点击重拨再次请求</string>
    <string name="vconf_applychair">申请管理方</string>
    <string name="vconf_applyspeaker">申请主讲人</string>
    <string name="vconf_applychair_failed">申请管理方失败</string>
    <string name="vconf_applyspeaker_failed">申请发言失败</string>
    <string name="vconf_agree">同意</string>
    <string name="vconf_ring_audio">音频呼叫</string>
    <string name="vconf_ring_video">视频呼叫</string>
    <string name="vconf_mcc_record">多方会议记录</string>
    <string name="vconf_last_record">最后会议：%1$s</string>
    <string name="vconf_duration">会议持续时间%1$s</string>
    <string name="vconf_clear_mcchistory">清空会议记录?</string>
    <string name="vconf_audio_failed">音频未连接</string>
    <string name="vconf_audio_duration">音频通话时间%1$s</string>
    <string name="vconf_video_failed">视频未连接</string>
    <string name="vconf_video_duration">视频通话时间%1$s</string>
    <string name="vconf_2g_unable">在当前的网络下您不能进行音视频通话</string>
    <string name="vconf_2g_unable_tel_join">在当前的网络下您不能进行音视频通话，请使用电话应答入会</string>
    <string name="vconf_now">正在通话中,轻击以继续</string>
    <string name="vconf_response">您有通话请求需要应答</string>
    <string name="vconf_response_unread">您有未接通的音视频请求</string>
    <string name="vconf_convene_name">%1$s的会议</string>
    <string name="vconf_createConf_failed">创建会议失败</string>
    <string name="add_vconf_person">联系人添加</string>
    <string name="add_vconf_person_for_phone">电话联系人添加</string>
    <string name="add_by_call_up">拨号添加</string>
</resources>