<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:id="@+id/ll_calendar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            >

            <ImageButton
                android:id="@+id/btnPreMonth"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="80dp"
                android:background="@drawable/ic_before" />

            <ImageButton
                android:id="@+id/btnNextMonth"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="80dp"
                android:background="@drawable/ic_next" />

            <TextView
                android:id="@+id/tvCurrentMonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="2015年12月22日"
                android:textColor="#323232"
                android:textSize="22sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/et_hint"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            >

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="20dip"
                android:layout_marginBottom="2dip"
                android:layout_marginTop="2dip" >

                <TableRow>

                    <TextView
                        style="@style/dateStyle"
                        android:text="@string/sunday"
                        android:textColor="@color/canlendar_text_color" />

                    <TextView
                        style="@style/dateStyle"
                        android:text="@string/monday"
                        android:textColor="@color/canlendar_text_color" />
                    <TextView
                        style="@style/dateStyle"
                        android:text="@string/thesday"
                        android:textColor="@color/canlendar_text_color" />

                    <TextView
                        style="@style/dateStyle"
                        android:text="@string/wednesday"
                        android:textColor="@color/canlendar_text_color" />

                    <TextView
                        style="@style/dateStyle"
                        android:text="@string/thursday"
                        android:textColor="@color/canlendar_text_color" />

                    <TextView
                        style="@style/dateStyle"
                        android:text="@string/friday"
                        android:textColor="@color/canlendar_text_color" />

                    <TextView
                        style="@style/dateStyle"
                        android:text="@string/saturday"
                        android:textColor="@color/canlendar_text_color" />
                </TableRow>
            </TableLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="15dp">

            <android.support.v4.view.ViewPager
                android:id="@+id/vp_calendar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@color/white" >
            </android.support.v4.view.ViewPager>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_meeting_num"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:textColor="@color/tv_mid"
        android:background="@color/white"
        android:textSize="20sp"
        android:text="今日待会见人员"
        android:gravity="center"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/et_hint"/>

    <ListView
        android:id="@+id/lv_meeting_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:dividerHeight="1dp"
        android:focusable="false"
        android:divider="@color/et_hint"></ListView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/et_hint"/>
</LinearLayout>
</ScrollView>